2008-02-11  Matthias Clasen <mclasen@redhat.com>

	* *.c: Documentation additions

2008-02-10  Matthias Clasen <mclasen@redhat.com>

	* gappinfo.h: Formatting cleanup
	* gappinfo.c: Fix up docs.

2008-02-09  Matthias Clasen <mclasen@redhat.com>

	* gunixmounts.c: Consistently use getmntent_r() and fall
	back to getmntent().  (#515492)

2008-02-09  Matthias Clasen <mclasen@redhat.com>

	* gbufferedinputstream.c:
	* ginputstream.c:
	* goutputstream.c: Use G_STRFUNC instead of __FUNCTION__.

	* tests/data-input-stream.c:
	* tests/data-output-stream.c: Portability fixes.

2008-02-08  Alexander Larsson  <alexl@redhat.com>

	* gio.symbols: 
        * gunixvolume.c:
        * gvolume.[ch]:
        Add g_volume_should_automount.
	Docs needed.

2008-02-07  Tor Lillqvist  <tml@novell.com>

	* tests/Makefile.am (TEST_PROGS): live-g-file won't build on
	Win32, too Unix-specific.

2008-02-06  Behdad Esfahbod  <behdad@gnome.org>

	* pltcheck.sh: Skip g_bit_*().  Inline functions may end up with
	a local plt if the compiler doesn't support what we want.  Bug #514702

2008-02-06  Murray Cumming,,,  <murrayc@murrayc.com>

	reviewed by: <delete if not using a buddy>

	* gfile.c:
	* gunixinputstream.c:
	* gunixoutputstream.c:

2008-02-06  Tomas Bzatek  <tbzatek@redhat.com>

	* tests/Makefile.am:
	* tests/live-g-file.c:
	* tests/live-g-file.txt:
	New GIO testing module working over real data

2008-02-06  Tomas Bzatek  <tbzatek@redhat.com>

	* glocalfileoutputstream.c (g_local_file_output_stream_close):
	Fallback to rename() if link() is not available
	(when no support on target filesystem)

2008-02-06  Michael Natterer  <mitch@imendio.com>

	* gfileinfo.c (g_file_info_get_icon): replace
	"icon && G_IS_ICON (icon)" by simply "G_IS_ICON (icon)".

2008-02-06  Tomas Bzatek  <tbzatek@redhat.com>

	* gfile.c (g_file_create):
	Documentation update of error codes

2008-02-06  Alexander Larsson  <alexl@redhat.com>

	* gdesktopappinfo.c:
	Update to use both mimeapps.list and