@@ -2528,10 +2528,13 @@ g_desktop_app_info_lookup_base_init (gpointer g_class)
  * @uri_scheme: a string containing a URI scheme.
  *
  * Gets the default application for launching applications 
- * using this URI scheme.
+ * using this URI scheme for a particular GDesktopAppInfoLookup
+ * implementation.
  *
- * There should be little reason to use this function directly,
- * it is preferred to use g_app_info_get_default_for_uri_scheme().
+ * The GDesktopAppInfoLookup interface and this function is used
+ * to implement g_app_info_get_default_for_uri_scheme() backends
+ * in a GIO module. There is no reason for applications to use it
+ * directly. Applications should use g_app_info_get_default_for_uri_scheme().
  * 
  * Returns: #GAppInfo for given @uri_scheme or %NULL on error.
  */
