@@ -1,3 +1,8 @@
+2008-02-11  Alexander Larsson  <alexl@redhat.com>
+
+        * gdesktopappinfo.c:
+	Minor docs cleanup
+
 2008-02-11  Matthias Clasen <mclasen@redhat.com>
 
 	* *.c: Documentation additions
